<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_payment_address"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lap_shop.shahad_3asal.activites.NewPaymentAddress"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <include
            layout="@layout/actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/textview1"
        android:padding="10dp"
        android:id="@+id/tv_email"
        android:layout_margin="6dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Fname"
        android:background="@drawable/textview1"
        android:padding="10dp"
        android:id="@+id/tv_fName"
        android:layout_margin="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sname"
        android:background="@drawable/textview1"
        android:padding="10dp"
        android:id="@+id/tv_lName"
        android:layout_margin="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <Spinner
        android:focusable="true"
        android:gravity="center"
        android:padding="2dp"
        android:background="@drawable/textview1"
        android:id="@+id/sp_country"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

        <Spinner
            android:focusable="true"
            android:gravity="center"
            android:padding="2dp"
            android:background="@drawable/textview1"
            android:id="@+id/sp_city"
            android:textAlignment="center"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zone"
            android:background="@drawable/textview1"
            android:padding="10dp"
            android:id="@+id/sp_zone"
            android:layout_margin="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address1"
        android:background="@drawable/textview1"
        android:padding="10dp"
        android:id="@+id/tv_faddress"
        android:layout_margin="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address2"
        android:background="@drawable/textview1"
        android:padding="10dp"
        android:id="@+id/tv_saddress"
        android:layout_margin="8dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/postcode"
        android:background="@drawable/textview1"
        android:padding="10dp"
        android:id="@+id/tv_postcode"
        android:layout_margin="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:inputType="number"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask"
                android:textColor="#000"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_alignTop="@+id/sc_switch"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:padding="4dp"
                />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_margin="8dp"
                android:id="@+id/sc_switch"
                android:layout_weight="4"
                />

        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_"
            android:textColor="#000"
            android:layout_margin="8dp"
            android:layout_centerInParent="true"
            android:id="@+id/tv_continue"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />



    </RelativeLayout>

        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>

